--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
-  flutter_riverpod: ^1.0.4
+  hooks_riverpod: ^1.0.4
   http: ^0.13.5
 
 dev_dependencies:
